[gd_scene load_steps=9 format=3 uid="uid://can6s85h1baj3"]

[ext_resource type="Script" path="res://scripts/ui/health_bar_container.gd" id="1_40t2o"]
[ext_resource type="Texture2D" uid="uid://cftmxmghkdsaq" path="res://assets/ui/health-bar/health-under.aseprite" id="2_w1e77"]
[ext_resource type="Texture2D" uid="uid://bq5oxyipkpdu3" path="res://assets/ui/health-bar/health-unit.aseprite" id="3_fu4np"]
[ext_resource type="Texture2D" uid="uid://bji88ryhqpt1r" path="res://assets/ui/health-bar/health-bar-border.aseprite" id="4_lc7j7"]

[sub_resource type="Animation" id="Animation_i4f80"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_8grvq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qn5gl"]
resource_name = "fade_in"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l0uxk"]
_data = {
"RESET": SubResource("Animation_8grvq"),
"fade_in": SubResource("Animation_qn5gl"),
"fade_out": SubResource("Animation_i4f80")
}

[node name="HealthBarContainer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_40t2o")

[node name="HealthBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_right = 120.0
offset_bottom = 64.0
scale = Vector2(1, 0.760001)
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource("2_w1e77")
texture_progress = ExtResource("3_fu4np")

[node name="TextureRect" type="TextureRect" parent="HealthBar"]
layout_mode = 0
offset_left = -4.0
offset_top = -5.26315
offset_right = 116.0
offset_bottom = 58.7369
scale = Vector2(1.09198, 1.13524)
texture = ExtResource("4_lc7j7")

[node name="HealthBarVisibleTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l0uxk")
}

[connection signal="value_changed" from="HealthBar" to="." method="_on_health_bar_value_changed"]
[connection signal="timeout" from="HealthBarVisibleTimer" to="." method="_on_health_bar_visible_timer_timeout"]
